--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
     <script type="text/javascript" src="js/init.js"></script>
 
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <base href="/">
+    <!-- <base href="/"> -->
 </head>
 
 <body>
@@ -25,8 +25,7 @@
         <div class="row">
             <a class='dropdown-button btn blue lighten-1' href='#' data-activates='dropdown1'> Menu </a>
             <ul id='dropdown1' class='dropdown-content' style="z-index: 200;">
-                <li><a href="/">Home</a></li>
-                <li><a href="/detail">Detail</a></li>
+                <li><a href="#/">Home</a></li>
             </ul>
             <div class="divider blue dark-1" style="margin-bottom:15px;"></div>
         </div>
