--- a/public/home.html
+++ b/public/home.html
@@ -1,12 +1,10 @@
 <div class="row" ng-controller="homeCtrl">
+    <div ng-show="data">No list</div>
     <div class="col s12 m6" ng-repeat="item in data">
         <div class="card">
             <div class="card-image">
                 <img src="img/sample-1.jpg">
-                <span class="card-title">{{ item.title }}</span>
-            </div>
-            <div class="card-content">
-                <p>{{ item.about }} </p>
+                <span class="card-title">{{ item.name }}</span>
             </div>
             <div class="card-action">
                 <a href="#/detail/{{ item._id }}">View</a>
