restructured plus refactoring gulp concat

--- a/public/detail.html
+++ b/public/detail.html
@@ -9,8 +9,9 @@
             </div>
         </div>
         <div class="col s12 m6">
+            <p class="flow-text">{{ detail.name }}</p>
             <p>{{ detail.about }}</p>
-            <p>Open on {{ detail.open.days }} during {{ detail.open.hours }}</p>
+            <p>Open on: <br/><strong>{{ detail.open.days }}</strong> during <strong>{{ detail.open.hours }}</strong></p>
         </div>
     </div>
     <div class="row">
