--- a/public/home.html
+++ b/public/home.html
@@ -1,6 +1,6 @@
 <div class="row" ng-controller="homeCtrl">
-    <div ng-show="data">No list</div>
-    <div class="col s12 m6" ng-repeat="item in data">
+    <div ng-hide="data">No list</div>
+    <div class="col s12 m4" ng-repeat="item in data | limitTo: 20">
         <div class="card">
             <div class="card-image">
                 <img src="img/sample-1.jpg">
@@ -9,6 +9,6 @@
             <div class="card-action">
                 <a href="#/detail/{{ item._id }}">View</a>
             </div>
-        </div>
+        </div> 
     </div>
 </div>
