--- a/public/index.html
+++ b/public/index.html
@@ -1,20 +1,18 @@
 <!DOCTYPE html>
 <html ng-app="restaApp">
-<head>
+<head> 
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Restaurant</title>
     <!-- css -->
     <link rel="stylesheet" type="text/css" href="lib/Materialize/dist/css/materialize.min.css">
-    <link rel="stylesheet" type="text/css" href="css/app.css">
     <!-- javascript -->
     <script type="text/javascript" src="lib/jquery/dist/jquery.min.js"></script>
     <script type="text/javascript" src="lib/angular/angular.min.js"></script>
     <script type="text/javascript" src="lib/angular-route/angular-route.min.js"></script>
     <script type="text/javascript" src="lib/Materialize/dist/js/materialize.min.js"></script>
-    <script type="text/javascript" src="app.js"></script>
-    <script type="text/javascript" src="js/init.js"></script>
+    <script type="text/javascript" src="build/resta.js"></script>
 
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!-- <base href="/"> -->
