--- a/public/detail.html
+++ b/public/detail.html
@@ -3,7 +3,7 @@
         <div class="col s12 m6">
             <div class="card">
                 <div class="card-image">
-                    <img ng-src="{{detail.photo}}">
+                    <img ng-src="{{detail.photo}}" alt="{{ detail.name }} photo">
                 </div>
             </div>
         </div>
