--- a/public/index.html
+++ b/public/index.html
@@ -13,10 +13,18 @@
     <script type="text/javascript" src="lib/angular/angular.min.js"></script>
     <script type="text/javascript" src="lib/angular-route/angular-route.min.js"></script>
     <script type="text/javascript" src="lib/Materialize/dist/js/materialize.min.js"></script>
-    <script type="text/javascript" src="build/resta.js"></script>
+    <script type="text/javascript" src="build/resta.min.js"></script>
     <!-- icons -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!-- <base href="/"> -->
+    <style type="text/css">
+    .card-title a {
+        padding: 5px;
+        background-color: rgba(66, 165, 245, 0.52);
+        border-radius: 10px;
+        color: black;
+    }
+    </style>
 </head>
 
 <body>
