--- a/public/home.html
+++ b/public/home.html
@@ -1,37 +1,36 @@
 <div class="row" ng-controller="homeCtrl">
     <div class="col s12">
         <div class="input-field col s6">
-            <input list='arrival' class="validate" type='text' ng-model="query" placeholder="Filter eg Colorado or by name eg Amtap" />
-            <datalist id="arrival">
-                <select name="arrival">
-                    <option></option>
-                    <option value="New jersey">Jersey</option>
-                    <option value="Colorado">Colorado</option>
-                </select>
+            <input list='arrival' class="validate" type='text' ng-model="query" placeholder="Filter eg Sandwitch" />
+            <datalist id="arrival" name="arrival">
+                <option></option>
+                <option value="sandwitch">Sandwitch</option>
+                <option value="pizza">Pizza</option>
             </datalist>
         </div>
     </div>
+    <div class="loading" ng-show="!data.length">
+        <h2>Loading</h2>
+    </div>
     <div class="col s12 m4" ng-repeat="item in data | limitTo: limit | filter:query | orderBy: name">
-        <div class="card hoverable">
-            <div class="card-image">
-                <img ng-src="{{ item.photo }}/{{$index}}" alt="{{ item.name }} photo">
-                <span class="card-title"><a href="#/detail/{{ item._id }}">{{ item.name }}</a></span>
+        <a href="#/detail/{{ item._id }}">
+            <div class="card hoverable">
+                <div class="card-image">
+                    <img src="img/sample-1.jpg" alt="{{ item.name }} photo">
+                </div>
+                <div class="card-content">
+                    <span class="flow-text teal-text">{{ item.name }}</span>
+                </div>
             </div>
-            <div class="card-action">
-                <a href="#/detail/{{ item._id }}" class="teal-text">View</a>
-            </div>
-        </div>
+        </a>
     </div>
     <div class="row">
         <div class="col s12">
-            
-        <center>
-    <a ng-click="showMore()" class="btn-floating btn-large waves-effect waves-light">
-        <i class="material-icons">expand_more</i>
-    </a>
-</center>
-
+            <center>
+                <a ng-click="showMore()" class="btn-floating btn-large waves-effect waves-light">
+                    <i class="material-icons">expand_more</i>
+                </a>
+            </center>
         </div>
     </div>
-
 </div>
