--- a/public/index.html
+++ b/public/index.html
@@ -8,23 +8,9 @@
     <title>Restaurant App</title>
     <!-- css -->
     <link rel="stylesheet" type="text/css" href="lib/Materialize/dist/css/materialize.min.css">
-    <!-- javascript -->
-    <script type="text/javascript" src="lib/jquery/dist/jquery.min.js"></script>
-    <script type="text/javascript" src="lib/angular/angular.min.js"></script>
-    <script type="text/javascript" src="lib/angular-route/angular-route.min.js"></script>
-    <script type="text/javascript" src="lib/Materialize/dist/js/materialize.min.js"></script>
-    <script type="text/javascript" src="build/resta.min.js"></script>
     <!-- icons -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!-- <base href="/"> -->
-    <style type="text/css">
-    .card-title a {
-        padding: 5px;
-        background-color: rgba(66, 165, 245, 0.52);
-        border-radius: 10px;
-        color: black;
-    }
-    </style>
 </head>
 
 <body>
@@ -35,6 +21,13 @@
         </div>
         <div ng-view></div>
     </div>
+    <!-- javascript -->
+    <script type="text/javascript" src="lib/jquery/dist/jquery.min.js"></script>
+    <script type="text/javascript" src="lib/angular/angular.min.js"></script>
+    <script type="text/javascript" src="lib/angular-route/angular-route.min.js"></script>
+    <script type="text/javascript" src="lib/Materialize/dist/js/materialize.min.js"></script>
+    <script type="text/javascript" src="build/resta.min.js"></script>
+    <script type="text/javascript" src="scripts/holder.min.js"></script>
 </body>
 
 </html>
