fixed the aria issues

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="restaApp">
+<html ng-app="restaApp" lang="en">
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -15,7 +15,7 @@
 
 <body>
     <div class="container">
-        <a class='dropdown-button btn blue lighten-1' href="#/"> Home </a>
+        <a class='dropdown-button btn black white-text lighten-1' href="#/"> Home </a>
         <div class="divider blue dark-1" style="margin-bottom:15px;"></div>
         <div ng-view></div>
     </div>
