--- a/public/home.html
+++ b/public/home.html
@@ -1,7 +1,7 @@
 <div class="row" ng-controller="homeCtrl">
     <div class="col s12">
         <div class="input-field col s6">
-            <input list='arrival' class="validate" type='text' ng-model="query" placeholder="Filter eg Sandwitch" />
+            <input list='arrival' aria-label="Filter" class="validate" type='text' ng-model="query" placeholder="Filter eg Sandwitch" />
             <datalist id="arrival" name="arrival">
                 <option></option>
                 <option value="sandwitch">Sandwitch</option>
@@ -27,7 +27,7 @@
     <div class="row">
         <div class="col s12">
             <center>
-                <a ng-click="showMore()" class="btn-floating btn-large waves-effect waves-light">
+                <a ng-click="showMore()" class="btn-floating btn-large black white-text waves-effect waves-light">
                     <i class="material-icons">expand_more</i>
                 </a>
             </center>
