implemented some of the review suggestions

--- a/public/index.html
+++ b/public/index.html
@@ -15,9 +15,11 @@
 
 <body>
     <div class="container">
-        <a class='dropdown-button btn black white-text lighten-1' href="#/"> Home </a>
-        <div class="divider blue dark-1" style="margin-bottom:15px;"></div>
-        <div ng-view></div>
+        <nav class="white">
+            <a class='dropdown-button btn black white-text lighten-1' href="#/"> Home </a>
+            <div class="divider blue dark-1" style="margin-bottom:15px;"></div>
+        </nav>
+        <main ng-view></main>
     </div>
     <!-- javascript -->
     <script type="text/javascript" src="lib/jquery/dist/jquery.min.js"></script>
