--- a/public/home.html
+++ b/public/home.html
@@ -1,6 +1,6 @@
 <div class="row" ng-controller="homeCtrl">
     <div class="col s12">
-        <div class="input-field col s6">
+        <div class="input-field col s6" role="search">
             <input list='arrival' aria-label="Filter" class="validate" type='text' ng-model="query" placeholder="Filter eg Sandwitch" />
             <datalist id="arrival" name="arrival">
                 <option></option>
@@ -12,7 +12,7 @@
     <div class="loading" ng-show="!data.length">
         <h2>Loading</h2>
     </div>
-    <div class="col s12 m4" ng-repeat="item in data | limitTo: limit | filter:query | orderBy: name">
+    <article class="col s12 m4" ng-repeat="item in data | limitTo: limit | filter:query | orderBy: name">
         <a href="#/detail/{{ item._id }}">
             <div class="card hoverable">
                 <div class="card-image">
@@ -23,11 +23,11 @@
                 </div>
             </div>
         </a>
-    </div>
+    </article>
     <div class="row">
         <div class="col s12">
             <center>
-                <a ng-click="showMore()" class="btn-floating btn-large black white-text waves-effect waves-light">
+                <a ng-click="showMore()" class="btn-floating btn-large black white-text waves-effect waves-light" tabindex="0">
                     <i class="material-icons">expand_more</i>
                 </a>
             </center>
