--- a/public/detail.html
+++ b/public/detail.html
@@ -48,23 +48,23 @@
             <div class="row">
                 <div class="input-field col s12">
                     <input id="full_name" type="text" ng-model="formData.name" class="validate">
-                    <label for="full_name">Full name</label>
+                    <label for="full_name" class="black-text">Full name</label>
                 </div>
             </div>
             <div class="row">
                 <div class="input-field col s12">
                     <input id="email" type="email" ng-model="formData.email" class="validate">
-                    <label for="email">Email</label>
+                    <label for="email" class="black-text">Email</label>
                 </div>
             </div>
             <div class="row">
                 <div class="input-field col s12">
                     <textarea id="textarea1" class="materialize-textarea" ng-model="formData.message" length="120"></textarea>
-                    <label for="textarea1">Review</label>
+                    <label for="textarea1" class="black-text">Review</label>
                 </div>
             </div>
             <div class="row">
-                <button type="submit" ng-click="createReview()" class="btn-floating btn-large waves-effect waves-light"><i class="material-icons">add</i></button>
+                <button type="submit" ng-click="createReview()" class="btn-floating btn-large waves-effect waves-light white-text black"><i class="material-icons">add</i></button>
             </div>
         </form>
     </div>
